# nodus-hitl-hub

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: HITL_HUB_ARCHITECTURE.md  NOTIFY_ROADMAP.md
k8s/: configmap.yaml  deployment.yaml
src/nodus_hitl_hub/: __init__.py  bootstrap.py  server.py
src/nodus_hitl_hub/core/: __init__.py  channels.py  dispatcher.py  engine.py  lifecycle.py  nostr_bridge.py  notify_engine.py  notify_repository.py  repository.py  validator.py
src/nodus_hitl_hub/db/: queries.py
src/nodus_hitl_hub/db/migrations/: 001_create_nostr_hitl.sql  002_create_notifications.sql  002_extend_nostr_hitl.sql
src/nodus_hitl_hub/mcp/: __init__.py  resources.py  rest.py  tools.py
src/nodus_hitl_hub/models/: events.py  hitl.py  notify.py
src/nodus_hitl_hub/plugins/: __init__.py
src/nodus_hitl_hub/plugins/channels/: __init__.py  base.py  email.py  webpush.py  whatsapp.py
src/nodus_hitl_hub/plugins/hooks/: audit.py  base.py  cache.py  expiry.py  modelbook.py
src/nodus_hitl_hub/plugins/notifications/: base.py  nostr.py  sse.py
src/nodus_hitl_hub/plugins/validators/: base.py  calendar.py  default.py  email.py  modelbook_conflict.py  recording.py  sensor_deploy.py
tests/: test_core.py  test_modelbook_flow.py  test_notify.py
