[project]
name = "nodus-hitl-hub"
version = "0.1.0"
description = "HITL Hub — Unified Human-In-The-Loop MCP server for Nodus OS"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "asyncpg>=0.30.0",
  "redis>=5.0.0",
  "pydantic>=2.0.0",
  "httpx>=0.28.0",
  "nostr-sdk>=0.35.0",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nodus_hitl_hub = ["db/migrations/*.sql"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
